force-app/main/default/objects/LINE_Settings__c/LINE_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >LINE Connect settings (org-level record). Edited in the LINE Admin tab. Blank values use the defaults in LineSettings.</description>
    <label>LINE Settings</label>
</CustomObject>