force-app/main/default/objects/LINE_Settings__c/fields/Daily_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Create one Event per conversation per day in Activity History.</description>
    <label>Daily Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>