force-app/main/default/objects/LINE_Settings__c/fields/Fallback_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Owner_Id__c</fullName>
    <description
  >User or queue that owns conversations of inactive OAs.</description>
    <label>Fallback Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>