force-app/main/default/objects/LINE_Settings__c/fields/Invite_Code_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Invite_Code_Expiry_Days__c</fullName>
    <description>Days before a QR invite code expires. Default 7.</description>
    <label>Invite Code Expiry (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>