force-app/main/default/objects/LINE_Settings__c/fields/Max_Download_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_Download_Bytes__c</fullName>
    <description
  >Largest inbound file downloaded into Salesforce Files. Default 10,000,000.</description>
    <label>Max Download Bytes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>