force-app/main/default/objects/LINE_Settings__c/fields/Message_Retention_Months__c.field-meta.xml
<CustomField>
    <fullName>Message_Retention_Months__c</fullName>
    <description
  >Messages older than this are deleted nightly. 0 = keep forever (default).</description>
    <label>Message Retention (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>