force-app/main/default/objects/LINE_Settings__c/fields/Poll_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Poll_Interval_Seconds__c</fullName>
    <description
  >How often the open chat panel checks for new messages. Default 5.</description>
    <label>Poll Interval (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>