force-app/main/default/objects/LINE_Settings__c/fields/Public_Link_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Public_Link_Expiry_Days__c</fullName>
    <description
  >Days before outbound file/document links expire. Default 7.</description>
    <label>Public Link Expiry (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>