force-app/main/default/objects/LINE_Settings__c/fields/Site_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Site_Base_Url__c</fullName>
    <description
  >Public Site base URL, including any path prefix. The webhook URL is built from it.</description>
    <label>Site Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>