force-app/main/default/objects/LINE_Settings__c/fields/Update_Contact_Owner_On_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Update_Contact_Owner_On_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When an OA is reassigned, also change the owner of its linked Contacts.</description>
    <label>Update Contact Owner On Reassign</label>
    <type>Checkbox</type>
</CustomField>